# uithub-local

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
src/uithub_local/: __init__.py  api.py  cli.py  downloader.py  loader.py  renderer.py  utils.py  walker.py
tests/: test_api.py  test_cli.py  test_downloader.py  test_loader.py  test_renderer.py  test_tokenizer.py  test_utils.py  test_walker.py
tests/golden/: dump.txt
